--- a/src/styles/edit.scss
+++ b/src/styles/edit.scss
@@ -12,13 +12,11 @@ a.editable {
     border: 1px solid transparent;
 }
 
-a.editable:hover, a.editable[data-state=show] {
-    text-decoration: none;
-    color: $text-color;
-    border: 1px solid $edit-border-color;
-    background-color: $edit-background-color;
+a.editable > p {
+    margin-bottom: 0;
 }
 
+/* Hide button group by default */
 .edit-group {
     position: absolute;
     top: -22px;
@@ -26,6 +24,7 @@ a.editable:hover, a.editable[data-state=show] {
     visibility: hidden;
 }
 
+/* Square edges on button group */
 .edit-group > button {
     border-bottom: 0 !important;
     border-radius:         0px !important;
@@ -33,7 +32,22 @@ a.editable:hover, a.editable[data-state=show] {
     -moz-border-radius:    0px !important;
 }
 
+/* Hover and 'show' state - background and border */
+a.editable:hover, a.editable[data-state=show] {
+    text-decoration: none;
+    color: $text-color;
+    border: 1px solid $edit-border-color;
+    background-color: $edit-background-color;
+}
+
+/* Hover and 'show' state - make button group visible */
 a.editable:hover > .edit-group,
 a.editable[data-state=show] > .edit-group {
     visibility: visible;
 }
+
+/* 
+Removed - 'show' state
+a.editable[data-state=show]                 (same as a.editable:hover)
+a.editable[data-state=show] > .edit-group   (a.editable:hover > .edit-group)
+*/
