--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,67 +24,140 @@ a.editable > p {
   -webkit-border-radius: 0px !important;
   -moz-border-radius: 0px !important; }
 
-/* Hover and 'show' state - background and border */
+/* Hover and 'show' state - background and border 
 a.editable:hover, a.editable[data-state=show] {
-  text-decoration: none;
-  color: #222;
-  border: 1px solid #2e6da4;
-  background-color: #eff5fb; }
-
-/* Hover and 'show' state - make button group visible */
+    text-decoration: none;
+    color: $text-color;
+    border: 1px solid $edit-border-color;
+    background-color: $edit-background-color;
+}
+*/
+/* Hover and 'show' state - make button group visible 
 a.editable:hover > .edit-group,
 a.editable[data-state=show] > .edit-group {
-  visibility: visible; }
-
-/* 
-Removed - 'show' state
-a.editable[data-state=show]                 (same as a.editable:hover)
-a.editable[data-state=show] > .edit-group   (a.editable:hover > .edit-group)
+    visibility: visible;
+}
 */
 
-html, body {
+html, body, .content {
   height: 100%;
-  margin: 0;
+  margin: 0px;
   padding: 0px; }
 
 .flexbox-container {
-  display: -ms-flex;
-  display: -webkit-flex;
   display: -webkit-box;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
-  height: 100%; }
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+      flex-flow: row wrap;
+  height: 100%;
+  overflow: hidden; }
 
-.nav-pane, .doc-pane {
-  position: relative; }
+.flexbox-container > * {
+  padding: 0px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 100%;
+      -ms-flex: 1 100%;
+          flex: 1 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap; }
 
-.nav-pane {
-  margin-right: 20px;
-  width: 25%;
+.sidepanel {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 auto;
+      -ms-flex: 1 auto;
+          flex: 1 auto; }
+
+.centre, .left, .right {
+  position: relative;
+  -webkit-transition: all 0.33s ease-out 0s;
+  transition: all 0.33s ease-out 0s; }
+
+.left {
+  -webkit-box-ordinal-group: 2;
+  -webkit-order: 1;
+      -ms-flex-order: 1;
+          order: 1;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  /*margin-right: 20px;*/
   background-color: white; }
 
-.doc-pane {
-  width: 75%;
+.centre {
+  text-align: left;
+  -webkit-box-ordinal-group: 3;
+  -webkit-order: 2;
+      -ms-flex-order: 2;
+          order: 2;
+  -webkit-box-flex: 2;
+  -webkit-flex: 2 0px;
+      -ms-flex: 2 0px;
+          flex: 2 0px;
+  -webkit-box-flex: 3;
+  -webkit-flex-grow: 3;
+      -ms-flex-positive: 3;
+          flex-grow: 3;
   background-color: #e2e2e2; }
+
+.right {
+  -webkit-box-ordinal-group: 4;
+  -webkit-order: 3;
+      -ms-flex-order: 3;
+          order: 3;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  background-color: white; }
 
 .panel-content {
   position: absolute;
-  top: 0;
+  -webkit-box-flex: 2;
+  -webkit-flex: 2 0px;
+      -ms-flex: 2 0px;
+          flex: 2 0px;
+  top: 50px;
   right: 0;
   bottom: 0;
   left: 0;
   overflow: auto; }
 
-.nav-pane > .panel-content {
+.left > .panel-content,
+.right > .panel-content {
   padding: 20px; }
 
-.doc-pane > .panel-content {
+.centre > .panel-content {
   padding: 40px; }
+
+.flex-hide {
+  -webkit-box-flex: 0;
+  -webkit-flex-grow: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -webkit-transition: all 0.33s ease-in 0s;
+  transition: all 0.33s ease-in 0s; }
 
 .doc {
   background-color: white;
-  padding: 30px;
+  padding: 50px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
+
+.panel-title-right {
+  text-align: center; }
+
+/* Navbar */
+.navbar-padding {
+  padding: 0 10px; }
 
 /* sidebar */
 .bs-docs-sidebar {
