--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,57 +1,96 @@
 $nav-panel-bg: white;
-$nav-panel-width: 25%;
 $doc-container-bg: #e2e2e2;
-$doc-container-width: 75%;
 $doc-background: white;
-$doc-padding: 30px;
+$doc-padding: 50px;
+$top-space: 50px;
 
-html, body {
-    height: 100%;
-    margin: 0;
+html, body, .content {
+    height:  100%;
+    margin:  0px;
     padding: 0px;
 }
 
 .flexbox-container {    
-    display: -ms-flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: -webkit-flex;
-    display: flex;
-    height: 100%;
+    display: flex;  
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
+    height:100%;
+    overflow: hidden;
 }
 
-.nav-pane, .doc-pane {
+.flexbox-container > * {
+    padding: 0px;
+    flex: 1 100%;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+.sidepanel { 
+    flex: 1 auto; 
+}
+
+.centre, .left, .right {
     position: relative;
+    -webkit-transition: all 0.33s ease-out 0s;
+    transition: all 0.33s ease-out 0s;
 }
 
-.nav-pane {
-    margin-right: 20px;
-    width: $nav-panel-width;
+.left {
+    order: 1;
+    flex-grow: 1;
+    /*margin-right: 20px;*/
     background-color: $nav-panel-bg;
 }
 
-.doc-pane {
-    width: $doc-container-width;
+.centre {
+    text-align: left;
+    order: 2;
+    flex: 2 0px; 
+    flex-grow: 3;
     background-color: $doc-container-bg;
+}
+
+.right {
+    order: 3;
+    flex-grow: 1;
+    background-color: $nav-panel-bg;
 }
 
 .panel-content {
     position: absolute;
-    top: 0; 
+    flex: 2 0px;
+    top: $top-space; 
     right: 0;
     bottom: 0;
     left: 0;
     overflow: auto;
 }
 
-.nav-pane > .panel-content {
+.left > .panel-content,
+.right > .panel-content {
     padding: 20px;
 }
 
-.doc-pane > .panel-content {
+.centre > .panel-content {
     padding: 40px;
+}
+
+.flex-hide {
+    flex-grow: 0;
+    -webkit-transition: all 0.33s ease-in 0s;
+    transition: all 0.33s ease-in 0s;
 }
 
 .doc {
     background-color: $doc-background;
     padding: $doc-padding;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.panel-title-right {
+    text-align: center;
 }
