--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -89,6 +89,27 @@ html, body, .content {
     background-color: $doc-background;
     padding: $doc-padding;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    
+    padding: 0px;
+    flex: 1 100%;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    flex-flow: row wrap;
+}
+
+.contents {
+    flex: 1 auto; 
+    width: 80%;
+    display: inline-block;
+    padding: 50px;
+}
+
+.comments {
+    flex: 1 auto; 
+    width: 20%;
+    display: inline-block;
+    border-left: 1px solid #e2e2e2;
+    padding: 20px;
 }
 
 .panel-title-right {
