--- a/src/css/style.css
+++ b/src/css/style.css
@@ -157,39 +157,69 @@ html, body, .content {
   display: -ms-flexbox;
   display: -moz-flex;
   display: -webkit-flex;
-  display: flex;
-  -webkit-align-items: stretch;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch; }
+  display: flex; }
 
-.contents, .comments {
+.contents {
+  -webkit-box-flex: 2;
+  -webkit-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+  padding: 50px; }
+
+/* Comments */
+.comments {
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
-          flex-grow: 1; }
-
-.contents {
-  padding: 50px; }
-
-.comments {
+          flex-grow: 1;
   padding: 0;
   border-left: 1px solid #e2e2e2; }
+
+.comments-hide {
+  -webkit-box-flex: 0;
+  -webkit-flex-grow: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  border-left: 0px;
+  -webkit-transition: all 0.33s ease-in 0.33s;
+  transition: all 0.33s ease-in 0.33s; }
 
 .comment-container {
   position: relative;
   height: 100%;
-  width: 300px; }
+  width: 100%;
+  /*padding: 0px;
+    flex: 1 100%;
+    flex-direction: row;
+    flex-wrap: nowrap;*/ }
 
 .comment-box {
   position: absolute;
-  width: 300px;
+  width: 100%;
   padding: 10px;
   border: 1px solid #c0392b; }
+
+.comments-hide .comment-box {
+  position: absolute;
+  width: 0px;
+  padding: 0px;
+  border: 0px; }
 
 .comment-text > input {
   border: 0;
   width: 100%; }
+
+.comment-hl {
+  background-color: pink;
+  border-right: 1px solid red; }
+
+div.line {
+  -webkit-transform-origin: 0 100%;
+      -ms-transform-origin: 0 100%;
+          transform-origin: 0 100%;
+  height: 1px;
+  background: #c0392b;
+  z-index: 5; }
 
 /* sidebar */
 .bs-docs-sidebar {
