--- a/src/css/style.css
+++ b/src/css/style.css
@@ -187,11 +187,7 @@ html, body, .content {
 .comment-container {
   position: relative;
   height: 100%;
-  width: 100%;
-  /*padding: 0px;
-    flex: 1 100%;
-    flex-direction: row;
-    flex-wrap: nowrap;*/ }
+  width: 100%; }
 
 .comment-box {
   position: absolute;
