--- a/src/css/style.css
+++ b/src/css/style.css
@@ -199,15 +199,17 @@ html, body, .content {
   position: absolute;
   width: 0px;
   padding: 0px;
-  border: 0px; }
+  border: 0px;
+  visibility: hidden; }
 
-.comment-text > input {
+.comment-text > p {
   border: 0;
+  margin: 0 !important;
   width: 100%; }
 
 .comment-hl {
   background-color: pink;
-  border-right: 1px solid red; }
+  border-right: 1px solid #c0392b; }
 
 div.line {
   -webkit-transform-origin: 0 100%;
