--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -137,16 +137,18 @@ html, body, .content {
     width: 0px;
     padding: 0px;
     border: 0px;
+    visibility: hidden;
 }
 
-.comment-text > input {
+.comment-text > p {
     border: 0;
+    margin: 0 !important;
     width: 100%;
 }
 
 .comment-hl {
     background-color: pink;
-    border-right: 1px solid red;
+    border-right: 1px solid $comment-box-color;
 }
 
 div.line{
